feat:分类页面开发

--- a/src/UI/page/accounting/index.css
+++ b/src/UI/page/accounting/index.css
@@ -1,4 +1,13 @@
 .p-accounting {
+    height: 100%;
+    min-height: 100vh;
+    padding: 10px;
+
+    .ellipsis {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+    }
 
     .table-footer {
         position: fixed;
