--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,20 @@
-body {
-  margin: 0;
+html, body, #root {
+    height: 100%;
+    margin: 0;
 }
-#root {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.mercury-layout {
     height: 100vh;
 }
 .mercury-sider {
     /* display: flex;
     justify-content: center;
     align-items: center; */
+}
+.mercury-content {
+    height: 100vh;
+    overflow: scroll;
+    padding: 16px;
+    
 }
 .ant-layout-sider-children{
     display: flex;
@@ -31,11 +35,7 @@ body {
 .overflow-scroll {
     overflow: scroll;
 }
-.mercury-content {
-    padding: 8px;
-    position: relative;
-    overflow: scroll;
-}
+
 .no-margin {
     margin: 0 !important;
     margin-inline-end: 0 !important;
