--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ html, body, #root {
     align-items: center; */
 }
 .mercury-content {
-    height: 100vh;
+    height: 100%;
     overflow: scroll;
     padding: 16px;
     
@@ -27,6 +27,9 @@ html, body, #root {
 }
 .mt8 {
     margin-top: 8px;
+}
+.mb8 {
+    margin-bottom: 8px;
 }
 .plr8 {
     padding-left: 8px;
