--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,28 @@ html, body, #root {
     height: 100%;
     margin: 0;
 }
+
+/* 解释下这个css */
+
+::-webkit-scrollbar {
+    width: 6px;
+    background: transparent;
+}
+
+::-webkit-scrollbar-track {
+    border-radius: 4px;
+    background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    background: rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: rgba(0, 0, 0, 0.4);
+}
+
 .mercury-layout {
     height: 100vh;
 }
@@ -12,8 +34,8 @@ html, body, #root {
 }
 .mercury-content {
     height: 100%;
-    overflow: scroll;
-    padding: 16px;
+    overflow: hidden;
+    padding: 16px 16px 0 16px;
     
 }
 .ant-layout-sider-children{
