--- a/src/renderer/index.css
+++ b/src/renderer/index.css
@@ -28,9 +28,17 @@ html, body, #root {
     height: 100vh;
 }
 .mercury-sider {
-    /* display: flex;
-    justify-content: center;
-    align-items: center; */
+    /* display: flex; */
+}
+.mercury-logo img {
+    width: 48px;
+    height: 48px;
+    margin: 64px 0 24px;
+}
+.mercury-sider .ant-layout-sider-children{
+    flex-direction: column;
+    justify-content: start
+    
 }
 .mercury-content {
     height: 100%;
