--- a/src/renderer/index.css
+++ b/src/renderer/index.css
@@ -33,11 +33,14 @@ html, body, #root {
 .mercury-logo img {
     width: 48px;
     height: 48px;
-    margin: 64px 0 24px;
+    margin: 0 0 24px;
+}
+.mercury-reload {
+    cursor: pointer;
 }
 .mercury-sider .ant-layout-sider-children{
     flex-direction: column;
-    justify-content: start
+    justify-content: space-around
     
 }
 .mercury-content {
