--- a/src/renderer/page/home/index.css
+++ b/src/renderer/page/home/index.css
@@ -14,3 +14,10 @@
     background-color: #f0f0f0;
     border-radius: 4px;
 }
+.lunar-calendar-cell{
+    border-top: 2px solid #f0f0f0;
+}
+.lunar-calendar-cell:hover   {
+    background-color: #f0f0f0;
+    border-top: 2px solid #eccf10;
+}
