--- a/src/renderer/page/home/index.css
+++ b/src/renderer/page/home/index.css
@@ -1,6 +1,6 @@
 .home-page {
   height: 100vh;
-  overflow: scroll;
+  overflow: hidden;
 }
 .home-page-left {
   height: 100%;
@@ -10,6 +10,7 @@
   height: 100%;
   overflow: scroll;
 }
+
 .date-picker-col:hover {
   background-color: #f0f0f0;
   border-radius: 4px;
