--- a/src/renderer/index.css
+++ b/src/renderer/index.css
@@ -1,7 +1,7 @@
 html,
 body,
 #root {
-  height: 100%;
+  height: 100vh;
   margin: 0;
 }
 
@@ -56,6 +56,9 @@ body,
 }
 .mt16 {
   margin-top: 16px;
+}
+.mb16 {
+  margin-bottom: 16px;
 }
 .mt8 {
   margin-top: 8px;
