--- a/src/renderer/page/accounting/index.css
+++ b/src/renderer/page/accounting/index.css
@@ -3,12 +3,14 @@
   overflow: scroll;
 }
 .full-width-bottom-footer {
-  width: 100%;
+  width: calc(100% - 70px);
   position: fixed;
+  background-color: rgba(255, 255, 255, 0.6);
+  backdrop-filter: blur(8px);
   bottom: 0;
-  left: 0;
+  left: 70px;
   right: 0;
-  z-index: 10;
-  background-color: #fff;
+  z-index: 15;
   padding: 10px 20px;
+  transition: all 0.2s ease 0s;
 }
