--- a/src/renderer/components/StatisticReser.css
+++ b/src/renderer/components/StatisticReser.css
@@ -36,6 +36,7 @@
   margin-bottom: 0 !important;
   margin-top: 8px !important;
   text-align: center; */
+  font-size: 12px;
   order: 2;
   margin-bottom: 0;
 }
@@ -51,6 +52,7 @@
 
 .statistic-reser-custom .ant-statistic-content-value {
   /* color: #1890ff !important; */
+  font-size: 14px;
 }
 
 .statistic-reser-custom .ant-statistic-content-prefix,
